@@ -48,6 +48,7 @@
 #include <sys/types.h>
 #include <unistd.h>
 
+extern GHashTable *ags_lv2_bridge_lv2ui_handle;
 extern GHashTable *ags_lv2_bridge_lv2ui_idle;
 
 void
@@ -135,13 +136,13 @@ ags_lv2_bridge_show_gui_callback(GtkMenuItem *item, AgsLv2Bridge *lv2_bridge)
 
     feature[2] = NULL;
     
-    if(AGS_BASE_PLUGIN(lv2ui_plugin)->plugin_so == NULL){
-      AGS_BASE_PLUGIN(lv2ui_plugin)->plugin_so = dlopen(AGS_BASE_PLUGIN(lv2ui_plugin)->ui_filename,
-							RTLD_NOW);
+    if(AGS_BASE_PLUGIN(lv2ui_plugin)->ui_plugin_so == NULL){
+      AGS_BASE_PLUGIN(lv2ui_plugin)->ui_plugin_so = dlopen(AGS_BASE_PLUGIN(lv2ui_plugin)->ui_filename,
+							   RTLD_NOW);
     }
     
-    if(AGS_BASE_PLUGIN(lv2ui_plugin)->plugin_so){
-      lv2ui_descriptor = (LV2UI_Descriptor *) dlsym(AGS_BASE_PLUGIN(lv2ui_plugin)->plugin_so,
+    if(AGS_BASE_PLUGIN(lv2ui_plugin)->ui_plugin_so){
+      lv2ui_descriptor = (LV2UI_Descriptor *) dlsym(AGS_BASE_PLUGIN(lv2ui_plugin)->ui_plugin_so,
 						    "lv2ui_descriptor");
       
       if(dlerror() == NULL && lv2ui_descriptor){
@@ -161,14 +162,17 @@ ags_lv2_bridge_show_gui_callback(GtkMenuItem *item, AgsLv2Bridge *lv2_bridge)
 							   lv2_bridge,
 							   &plugin_widget,
 							   feature);
-
+	g_hash_table_insert(ags_lv2_bridge_lv2ui_handle,
+			    lv2_bridge->ui_handle, lv2_bridge);
+	ui_descriptor->cleanup = ags_lv2_bridge_lv2ui_cleanup_function;
+	
 	if(ui_descriptor->extension_data != NULL){
 	  lv2_bridge->ui_feature[0]->data = ui_descriptor->extension_data(LV2_UI__idleInterface);
 	  lv2_bridge->ui_feature[1]->data = ui_descriptor->extension_data(LV2_UI__showInterface);
 
 	  g_hash_table_insert(ags_lv2_bridge_lv2ui_idle,
-			      lv2_bridge, ags_lv2_bridge_lv2ui_idle_timeout);
-	  g_timeout_add(1000 / 30, (GSourceFunc) ags_lv2_bridge_lv2ui_idle_timeout, (gpointer) lv2_bridge);
+			      lv2_bridge->ui_handle, lv2_bridge);
+	  g_timeout_add(1000 / 30, (GSourceFunc) ags_lv2_bridge_lv2ui_idle_timeout, (gpointer) lv2_bridge->ui_handle);
 	}	
       }
     }
@@ -185,6 +189,34 @@ ags_lv2_bridge_delete_event_callback(GtkWidget *widget, GdkEvent *event, AgsLv2B
 {
   
   return(TRUE);
+}
+
+void
+ags_lv2_bridge_lv2ui_cleanup_function(LV2UI_Handle handle)
+{
+  AgsLv2Bridge *lv2_bridge;
+
+  AgsLv2uiPlugin *lv2ui_plugin;
+
+  GList *list;
+
+  lv2_bridge = g_hash_table_lookup(ags_lv2_bridge_lv2ui_handle,
+				   handle);
+  
+  if(lv2_bridge != NULL){
+    list = ags_lv2ui_plugin_find_gui_uri(ags_lv2ui_manager_get_instance()->lv2ui_plugin,
+					 lv2_bridge->gui_uri);
+  
+    if(list != NULL){
+      lv2ui_plugin = list->data;
+      AGS_BASE_PLUGIN(lv2ui_plugin)->ui_plugin_so = NULL;
+    }
+
+    g_hash_table_remove(ags_lv2_bridge_lv2ui_handle,
+			lv2_bridge->ui_handle);
+
+    lv2_bridge->ui_handle = NULL;
+  }
 }
 
 void
@@ -211,8 +243,6 @@ ags_lv2_bridge_lv2ui_write_function(LV2UI_Controller controller, uint32_t port_i
     return;
   }
 
-  channel = AGS_MACHINE(lv2_bridge)->audio->input;
- 
   switch(port_protocol){
   case 0:
     {
@@ -228,9 +258,47 @@ ags_lv2_bridge_lv2ui_write_function(LV2UI_Controller controller, uint32_t port_i
   default:
     g_warning("unknown lv2 port protocol");
   }
-    
+
+  /* play */
+  channel = AGS_MACHINE(lv2_bridge)->audio->input;
+ 
   while(channel != NULL){
     recall = ags_recall_get_by_effect(channel->play,
+				      lv2_bridge->filename, lv2_bridge->effect);
+
+    if(recall != NULL){
+      recall_lv2 = recall->data;
+
+      port = AGS_RECALL(recall_lv2)->port;
+      control_port = g_strdup_printf("%d/%d",
+				     port_index + 1,
+				     g_list_length(port));
+	
+      while(port != NULL){
+	if(!g_ascii_strncasecmp(AGS_PORT(port->data)->control_port,
+				control_port,
+				strlen(control_port))){
+	  ags_port_safe_write(port->data,
+			      &value);
+	    
+	  break;
+	}
+	  
+	port = port->next;
+      }
+
+      free(control_port);
+    }
+
+    g_list_free(recall);
+    channel = channel->next;
+  }
+
+  /* recall */
+  channel = AGS_MACHINE(lv2_bridge)->audio->input;
+ 
+  while(channel != NULL){
+    recall = ags_recall_get_by_effect(channel->recall,
 				      lv2_bridge->filename, lv2_bridge->effect);
 
     if(recall != NULL){
