@@ -34,6 +34,7 @@ void ags_lv2_bridge_parent_set_callback(GtkWidget *widget, GtkObject *old_parent
 void ags_lv2_bridge_show_gui_callback(GtkMenuItem *item, AgsLv2Bridge *lv2_bridge);
 gboolean ags_lv2_bridge_delete_event_callback(GtkWidget *widget, GdkEvent *event, AgsLv2Bridge *lv2_bridge);
 
+void ags_lv2_bridge_lv2ui_cleanup_function(LV2UI_Handle handle);
 void ags_lv2_bridge_lv2ui_write_function(LV2UI_Controller controller, uint32_t port_index, uint32_t buffer_size, uint32_t port_protocol, const void *buffer);
 
 void ags_lv2_bridge_program_changed_callback(GtkComboBox *combo_box, AgsLv2Bridge *lv2_bridge);
