@@ -1,7 +1,9 @@
 ags (0.9.15)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
-	* fixed missing check for NULL of gtk_combo_box_text_append_text() parameter in all source code
+	* fixed missing check for NULL of gtk_combo_box_text_append_text()
+	parameter in all source code
+	* fixed missing LV2_UI cleanup handling
 
 ags (0.9.14)
 
